# Hackathon-2-Phase-1

./: .gitignore  README.md  pyproject.toml
.claude/agents/: cli-code-generator.md  spec-writer.md  test-runner.md
.claude/skills/cli-app-standards/: SKILL.md
.claude/skills/spec-writing-rules/: SKILL.md
.claude/skills/testing-guidelines/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-phase1-core-todo/: 002-create-phase1-specification.spec.prompt.md  003-create-phase1-implementation-plan.plan.prompt.md  004-generate-phase1-tasks.tasks.prompt.md  005-implement-phase1-complete.green.prompt.md
history/prompts/constitution/: 001-create-global-constitution.constitution.prompt.md
specs/001-phase1-core-todo/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-phase1-core-todo/checklists/: requirements.md
specs/001-phase1-core-todo/contracts/: internal_functions.md
src/: cli.py  main.py  task_manager.py  validators.py
